7th Commit - Fixing Dark Mode Bug

--- a/flashcards_react_app/src/css/MyFlashcards.module.css
+++ b/flashcards_react_app/src/css/MyFlashcards.module.css
@@ -62,4 +62,5 @@
 
 .title{
   text-align: center;
+  color: black;
 }
